# math-infer-finetune

./: .gitignore  .gitmodules  pyproject.toml
fine_tuning/: accelerate_config0.yaml  accelerate_config1.yaml  distributed_train.sh  ds.py  evaluate.py  evaluate.sh  evaluate_only.py  my_config.yaml  train.ipynb  train.py  train.sh  train_auto_train.sh  train_gemma.sh  train_llama.sh  train_qwen.py  train_qwen.sh  train_smollm_big.py  train_smollm_big.sh  train_utils.py
fine_tuning/direct_prompting/gsm8k/: evaluate.py  train.py  train_qwen.sh  train_smollm.sh
fine_tuning/direct_prompting/synthetic/: train.py
inference/direct_prompting_test/: execute.sh  main.py
inference/direct_prompting_train/: ds_train.py  execute.sh  main.py
inference/rewoo_test/: execute.sh  main.py  rewoo.py  rewoo_local.py
inference/rewoo_train/: ds_train.py  execute.sh  main.py  rewoo.py  rewoo_local.py  sft-planner-prep.ipynb
