[project]
name = "finetune"
version = "0.1.0"
description = ""
authors = [
    {name = "fe-bit"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "math-datasets @ file:///home/f/felbingerp/MA/finetune/math-datasets",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "trl (>=0.18.1,<0.19.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
