[project]
name = "math_infer_finetune"
version = "0.1.0"
description = ""
authors = [
    {name = "fe-bit"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "optimum (>=1.25.3,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]

[tool.poetry.dependencies]
math-datasets = {develop = true}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
